Change package name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@caeb/providers",
-    "version": "0.2.0",
+    "name": "caeb-providers",
+    "version": "0.2.1",
     "description": "Providers CEX/DEX by Caeb Wallace",
     "main": "dist/index.js",
     "scripts": {
@@ -14,6 +14,7 @@
         "format": "prettier --write \"src/**/*.{ts,json}\"",
         "lint": "tslint -p tsconfig.json",
         "prepare": "husky install",
+        "publish": "npm publish --access public",
         "doc": "rimraf ./docs && typedoc",
         "build:publish": "npm --no-git-tag-version version patch && npm run build && npm publish"
     },
