--- a/package.json
+++ b/package.json
@@ -50,18 +50,18 @@
         "tsconfig-paths": "^3.9.0",
         "tslint": "^6.1.3",
         "tslint-config-prettier": "^1.18.0",
-        "typedoc": "^0.20.36",
+        "typedoc": "^0.23.14",
         "typescript": "^4.2.4"
     },
     "lint-staged": {
         "*.{js,css,md,ts,json}": "prettier --write"
     },
     "dependencies": {
+        "axios": "^0.27.2",
         "binance-api-node": "^0.11.40",
         "caeb-types": "^1.0.10",
         "ftx-api": "^1.0.13",
         "kucoin-node-sdk": "^1.0.4",
-        "kucoin-sdk": "^2.0.1",
         "p-limit": "^2.3.0",
         "pino": "^6.11.3",
         "pino-pretty": "^4.8.0",
